final project unit testing
